# devices-api

./: .env.development  .env.production  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  entrypoint.sh  init-table-db.sh  init-user-db.sh  pyproject.toml
db_writer/: Dockerfile  main.py  start.sh
devices_api/: config.py  dependencies.py  main.py
devices_api/core/: constant.py  logger.py
devices_api/core/database/postgresql/: database.py
devices_api/core/exception/: base_exception.py  gps_device_exception.py  invalid_operation_exception.py
devices_api/core/models/postgres/: models.py
devices_api/core/repositories/: base_repository.py
devices_api/core/services/: base_service.py
devices_api/core/use_cases/: use_case.py
devices_api/features/gps_device/: dependencies.py
devices_api/features/gps_device/data/models/: gps_device.py  location.py
devices_api/features/gps_device/data/repositories/: gps_device_repository_impl.py  gps_device_unit_of_work_impl.py  gps_location_repository_impl.py  gps_location_unit_of_work_impl.py
devices_api/features/gps_device/data/services/: gps_device_service_impl.py  gps_location_service_impl.py
devices_api/features/gps_device/domain/entities/: gps_device_create_model.py  gps_device_entity.py  gps_device_read_model.py  gps_location_entity.py  gps_location_read_model.py
devices_api/features/gps_device/domain/repositories/: gps_device_repository.py  (+3 more)
fake_gps_data_generator/: main.py  tcp_client.py
tcp_server/: main.py
tests/: conftest.py  test_get_gps_devices.py
(+15 files in other folders)
